<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/t"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner">
        </com.google.android.gms.ads.AdView>


        <TextView
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="NCC Song"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:layout_below="@+id/a"
            android:id="@+id/b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song1"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/b"
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song2"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/c"
            android:id="@+id/d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song3"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/d"
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song4"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/e"
            android:id="@+id/f"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song5"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/f"
            android:id="@+id/g"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song6"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/g"
            android:id="@+id/h"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song7"
            android:textSize="30sp"
            android:textColor="#9b1c31"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/h"
            android:id="@+id/i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song8"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/i"
            android:id="@+id/j"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song9"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/j"
            android:id="@+id/k"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song10"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/k"
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song11"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/l"
            android:id="@+id/m"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song12"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/m"
            android:id="@+id/n"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song13"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/n"
            android:id="@+id/o"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song14"
            android:textSize="30sp"
            android:textColor="#0275d8"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/o"
            android:id="@+id/p"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song15"
            android:textSize="30sp"
            android:textColor="#5E35B1"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/p"
            android:id="@+id/q"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song16"
            android:textSize="30sp"
            android:textColor="#5E35B1"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/q"
            android:id="@+id/r"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song17"
            android:textSize="30sp"
            android:textColor="#5E35B1"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/r"
            android:id="@+id/s"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song18"
            android:textSize="30sp"
            android:textColor="#3949AB"
            android:gravity="center"/>
        <TextView
            android:layout_below="@+id/s"
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/song19"
            android:textSize="30sp"
            android:textColor="#5E35B1"
            android:gravity="center"/>


    </RelativeLayout>


</ScrollView>